# CRR-Agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json  real_default.json  resources.yaml
crr_agent/: __init__.py  ablations.py  adjudicator.py  baselines.py  cli.py  controlled_experiments.py  crypto.py  dag.py  experiment.py  io.py  metrics.py  policy.py  real_data.py  real_experiment.py  real_instrumentation.py  real_rules.py  receipts.py  replay.py  scenarios.py  selector.py  serde.py  types.py
experiments/: 00_generate_benchmark.py  01_run_baselines.py  02_run_crr_agent.py  03_run_ablation.py  04_cost_latency_sweep.py  05_export_tables.py  10_audit_real_data.py  11_run_real.py  12_summarize_real.py  13_analyze_real.py  14_run_real_ablation.py  20_run_native_agent_workflow.py  21_run_tamper_fault_injection.py  22_run_selector_analysis.py  run_all.py
scripts/: run_all.ps1  run_all.sh
tests/: test_completeness.py  test_core.py
