[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crr-agent"
version = "0.1.0"
description = "Contestable Replay Receipts for runtime governance of MCP/A2A-style agent workflows"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["crr_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
